@@ -212,3 +212,7 @@
 ; there are defined any hints that could be bought. 
 ; Default: undefined
 ;wallet_active=1
+
+; Common optional prefix of the keys (aka 'I.Q:' in I.Quest)
+; Default: empty
+;key_prefix=
