@@ -923,14 +923,23 @@ class Iquest_key{
     }
 
     static function canonicalize_key($key, $class){
+
+        // Get common not required prefix of the key and make sure it does not 
+        // contain non-alphanumeric characters
+        $key_prefix = Iquest_Options::get(Iquest_Options::KEY_PREFIX);
+        $key_prefix = strtolower($key_prefix);
+        $key_prefix = preg_replace("/[^a-z0-9]/", "", $key_prefix);
+
+
         // remove diacritics
         $key = remove_diacritics($key);
         // to lowercase
         $key = strtolower($key);
         // remove non-alphanumeric
         $key = preg_replace("/[^a-z0-9]/", "", $key);
-        // remove initial "iq" (it was "I.Q:")
-        $key = preg_replace("/^iq/", "", $key);
+
+        // remove the optional prefix (it was "I.Q:") from the key
+        if ($key_prefix) $key = preg_replace("/^$key_prefix/", "", $key);
 
         return $key;
     }
