@@ -600,6 +600,7 @@ class Chroust{
         Iquest_Options::set(Iquest_Options::HIDE_PLACE_TIMEOUT, 0);
         Iquest_Options::set(Iquest_Options::SHOW_GRAPH, 1);
         Iquest_Options::set(Iquest_Options::SHOW_GRAPH_CGRP_NAMES, 0);
+        Iquest_Options::set(Iquest_Options::KEY_PREFIX, "");
     }
 
     /**
