@@ -7,6 +7,7 @@
 * HQ: team ranks - graph improvements
 * HQ: team ranks - the rank table is updated to reflect lask time selected in the graph
 * chroust: possibility to manually specify the wallet_active flag
+* Key prefix (initial "I.Q:") is no more hardcoded but can be configured via .ini files
 
 rel 0.1.6
 * HQ: table - hyperlinks in popup info 
